# suno-archiver

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: demo.tape
docs/superpowers/plans/: 2026-06-11-suno-archiver.md
docs/superpowers/specs/: 2026-06-11-suno-archiver-design.md
skills/archiving-suno-library/: SKILL.md
suno_archiver/: __init__.py  auth.py  cli.py  core.py  suno_api.py
tests/: helpers.py  test_api.py  test_auth.py  test_cli.py  test_core.py
