[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suno-archiver"
version = "1.0.0"
description = "Archive your Suno music library: audio, cover art, and complete metadata, with incremental sync"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hunter Shokrian", email = "hnshokrian@gmail.com" }
]
keywords = ["suno", "ai-music", "downloader", "backup", "archive", "cli", "music-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "rookiepy>=0.5.0",
]

[project.scripts]
suno-archiver = "suno_archiver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["suno_archiver"]
